@@ -12,7 +12,7 @@ The basic rank supported by agate is standard "competition ranking". In this mod
 .. code-block:: python
 
     new_table = table.compute([
-        ('rank', agate.Rank('value')
+        (agate.Rank('value'), 'rank')
     ])
 
 Rank change
@@ -23,12 +23,12 @@ You can compute the change from one rank to another by combining the :class:`.Ra
 .. code-block:: python
 
     new_table = table.compute([
-        ('rank2014', agate.Rank('value2014'),
-        ('rank2015', agate.Rank('value2015')
+        (agate.Rank('value2014'), 'rank2014'),
+        (agate.Rank('value2015'), 'rank2015')
     ])
 
     new_table2 = new_table.compute([
-        ('rank_change', agate.Change('rank2014', 'rank2015')
+        (agate.Change('rank2014', 'rank2015'), 'rank_change')
     ])
 
 Percentile rank
@@ -39,7 +39,7 @@ Percentile rank
 .. code-block:: Python
 
     new_table = table.compute([
-        ('percentile_rank', agate.PercentileRank('value')
+        (agate.PercentileRank('value'), 'percentile_rank')
     ])
 
 Note that there is no entirely standard method for computing percentiles. The percentiles computed in this manner may not agree with those generated by other programes. See the :class:`.Percentiles` class documentation for implementation details.
